7 commit for violation 'TooMuchMethods in class'. I have refactored the code and formed the new class with the unique methods and transfered the methods